--- a/index.html
+++ b/index.html
@@ -99,11 +99,11 @@
         <h3 class="lb_heading">Brazil</h3>
         <p class="lb_text">
 
-            zazz sally housecoat kung-fu hippie scientician ....sign of evil number four where's poochie? beginualize frinkahedron baby guts eedily be-musement park homerhol explosion land assal horizontology faxtrola gangsta city well, that's the end of me t.g.i. mcscratchy's forty-two bathtubs, please fancy store-bought dirt iced cream wow, this is so much like my dreams it's scary hey-dilly-ho doodily betsy bleedingheart
+            The Brazil national football team (Portuguese: Seleção Brasileira de Futebol), nicknamed Seleção Canarinho (‘Canary Squad’, after their bright yellow jersey), represents Brazil in men's international football and is administered by the Brazilian Football Confederation (CBF), the governing body for football in Brazil. They have been a member of FIFA since 1923 and a member of CONMEBOL since 1916.
         </p>
         <p class="lb_text">
 
-            unnecessary surgery land smell ya later genius at work clouseauesque deceleratrix scratchtasia foodrinkery the cause of and solution to all of life's problems. debigulator the whipped group parents' island don'ter don'ter california cheeseburger superliminal quetzalzacatenango lisa, go to your room continuing our 'sign of evil' countdown zuh smarch jebus crantastic money fight riding the midnight train to slab city shiva h. vishnu
+            Brazil is the most successful national team in the FIFA World Cup, being crowned winner five times: 1958, 1962, 1970, 1994, and 2002. The Seleção also has the best overall performance in the World Cup competition, both in proportional and absolute terms, with a record of 73 victories in 109 matches played, 124 goal difference, 237 points, and 18 losses.[13][14] It is the only national team to have played in all World Cup editions without any absence nor need for playoffs,[15] and the only team to have won the World Cup in four different continents: once in Europe (1958 Sweden), once in South America (1962 Chile), twice in North America (1970 Mexico and 1994 United States), and once in Asia (2002 Korea/Japan). Brazil is also the most successful team in the now-defunct FIFA Confederations Cup, winning it four times, in 1997, 2005, 2009, and 2013.
         </p>
 
     </article>
