updated canada team info
updated canada team info

--- a/index.html
+++ b/index.html
@@ -121,11 +121,12 @@
         <h3 class="lb_heading">Canada</h3>
         <p class="lb_text">
 
-            zazz sally housecoat kung-fu hippie scientician ....sign of evil number four where's poochie? beginualize frinkahedron baby guts eedily be-musement park homerhol explosion land assal horizontology faxtrola gangsta city well, that's the end of me t.g.i. mcscratchy's forty-two bathtubs, please fancy store-bought dirt iced cream wow, this is so much like my dreams it's scary hey-dilly-ho doodily betsy bleedingheart
+            The Canada men's national soccer team (French: Équipe du Canada de soccer masculin) has represented Canada in international soccer competitions since 1924. The Canadian Soccer Association, the governing body for soccer in Canada, oversees them. They have been a member of FIFA since 1948 and a member of CONCACAF since 1961.
         </p>
         <p class="lb_text">
 
-            unnecessary surgery land smell ya later genius at work clouseauesque deceleratrix scratchtasia foodrinkery the cause of and solution to all of life's problems. debigulator the whipped group parents' island don'ter don'ter california cheeseburger superliminal quetzalzacatenango lisa, go to your room continuing our 'sign of evil' countdown zuh smarch jebus crantastic money fight riding the midnight train to slab city shiva h. vishnu
+            Their most significant achievements are winning the 1985 CONCACAF Championship to qualify for the 1986 FIFA World Cup and the 2000 CONCACAF Gold Cup to qualify for the 2001 FIFA Confederations Cup. Canada is the only national team to win a Gold Cup aside from regional powerhouses Mexico and the United States. Canada also won a gold medal in the 1904 Summer Olympics.
+            Canada participated in its second World Cup in 2022 and will co-host, along with the United States and Mexico, the 2026 FIFA World Cup.
         </p>
 
     </article>
